RESOLVED FIXED28161
Qt DumpRenderTree does not process named events.
https://bugs.webkit.org/show_bug.cgi?id=28161
Summary Qt DumpRenderTree does not process named events.
Mike Fenton
Reported 2009-08-10 12:30:57 PDT
The DumpRenderTree does not correctly process named events as used by the tests. Named events currently processed by Mac/Win and not handled by Qt include: leftArrow rightArrow upArrow downArrow pageUp pageDown home end delete Processing of these events needs to be added to the Qt DRT. This bug was discovered by the failure of fast/forms/textarea-arrow-navigation.html which was moved from editing/input and was relying on editing.js, which is no longer references by the test, but uses eventSender("downArrow") instead.
Attachments
Code change for DumpRenderTree keyDown processing. (2.78 KB, patch)
2009-08-10 13:05 PDT, Mike Fenton
manyoso: review-
Style patch for jsobjects.cpp based upon results of cpp_style.py and WebKit style guide. (11.00 KB, patch)
2009-08-10 13:16 PDT, Mike Fenton
no flags
Fix missing brace in previous patch. (11.00 KB, patch)
2009-08-11 07:36 PDT, Mike Fenton
eric: commit-queue-
Revised code change wrapping strings with QLatin1String() (2.92 KB, patch)
2009-08-11 08:49 PDT, Mike Fenton
no flags
Remove working tests from qt/Skipped associated with DRT update. (3.40 KB, patch)
2009-08-11 10:29 PDT, Mike Fenton
no flags
Replacement patch with proper ChangeLog Entry (11.00 KB, patch)
2009-08-12 09:47 PDT, Mike Fenton
manyoso: review+
Mike Fenton
Comment 1 2009-08-10 13:05:15 PDT
Created attachment 34500 [details] Code change for DumpRenderTree keyDown processing. This patch fixes the existing test and enables all missing string based key events. Existing tests in skipped also need to be tested for other tests now fixed by this change.
Mike Fenton
Comment 2 2009-08-10 13:16:52 PDT
Created attachment 34504 [details] Style patch for jsobjects.cpp based upon results of cpp_style.py and WebKit style guide.
Mike Fenton
Comment 3 2009-08-11 07:36:30 PDT
Created attachment 34555 [details] Fix missing brace in previous patch.
Adam Treat
Comment 4 2009-08-11 07:51:58 PDT
Comment on attachment 34500 [details] Code change for DumpRenderTree keyDown processing. This is awesome! I imagine this will fix quite a few tests :) A few comments: > + } else { > + qDebug() << ">>>>>>>>> keyDown" << string; Is this necessary? > + // map special keycode strings used by the tests to something that works for Qt/X11 > + if (string == "leftArrow") { string == QLatin1String("leftArrow") I think. r- to change. And then I'll land :)
Mike Fenton
Comment 5 2009-08-11 08:49:49 PDT
Created attachment 34562 [details] Revised code change wrapping strings with QLatin1String()
Mike Fenton
Comment 6 2009-08-11 10:29:10 PDT
Created attachment 34577 [details] Remove working tests from qt/Skipped associated with DRT update.
Adam Treat
Comment 7 2009-08-11 18:06:04 PDT
Comment on attachment 34562 [details] Revised code change wrapping strings with QLatin1String() Landed with r47077, clearing review flag.
Eric Seidel (no email)
Comment 8 2009-08-11 22:27:02 PDT
Comment on attachment 34555 [details] Fix missing brace in previous patch. LGTM.
Adam Treat
Comment 9 2009-08-12 05:44:54 PDT
Comment on attachment 34577 [details] Remove working tests from qt/Skipped associated with DRT update. Clear flags as this has landed.
Eric Seidel (no email)
Comment 10 2009-08-12 09:40:02 PDT
Comment on attachment 34555 [details] Fix missing brace in previous patch. Rejecting patch 34555 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 11 2009-08-12 09:41:09 PDT
ChangeLog diff is malformed. bugzilla-tool/svn-apply don't know how to fix it, hence the commit-queue rejected it.
Mike Fenton
Comment 12 2009-08-12 09:47:06 PDT
Created attachment 34667 [details] Replacement patch with proper ChangeLog Entry Here's a fixed patch with the changeLog entry complete.
Eric Seidel (no email)
Comment 13 2009-08-12 15:25:56 PDT
Comment on attachment 34555 [details] Fix missing brace in previous patch. clearing review flag on this obsolete patch.
Adam Treat
Comment 14 2009-08-17 06:52:08 PDT
Landed with r47358. Closing bug...
Note You need to log in before you can comment on or make changes to this bug.