Add processing for string constants used by the tests to trigger common actions like up, down, left, right, etc. for the Qt implementation of DumpRenderTree.

Patch by Mike Fenton <mike.fenton@torchmobile.com> on 2009-08-10
Reviewed by Adam Treat.

Note this allows fast/forms/textarea-arrow-navigation.html to pass
correctly.

https://bugs.webkit.org/show_bug.cgi?id=28161

* DumpRenderTree/qt/jsobjects.cpp:
(EventSender::keyDown):

Canonical link: https://commits.webkit.org/38678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47077 268f45cc-cd09-0410-ab3c-d52691b4dbfc